1. token memberNo 변수명 수정 2. 문서화 적용

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,12 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx512m
+openapi.url=http://localhost
 
 kotlin_version=1.4.30
 coroutines_version=1.4.2
 spring_cloud_version=Hoxton.SR8
 spring_security_oauth2_version=2.3.3.RELEASE
+spring_restdocs_version=2.0.4.RELEASE
 querydsl_version=4.3.1
 jwt_version=1.0.2.RELEASE
